fix selecting opponent piece in onlinegame